--- a/src/Interfaz/RegistrarExp.form
+++ b/src/Interfaz/RegistrarExp.form
@@ -194,9 +194,9 @@
                               <Component id="textoTelefono" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="textoTipo" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="textoTipo" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
