--- a/src/Interfaz/FinalizarTramite.form
+++ b/src/Interfaz/FinalizarTramite.form
@@ -199,9 +199,9 @@
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="3">
-                <StringItem index="0" value="Alta"/>
-                <StringItem index="1" value="Media"/>
-                <StringItem index="2" value="Baja"/>
+                <StringItem index="0" value="1-Alta"/>
+                <StringItem index="1" value="2-Media"/>
+                <StringItem index="2" value="3-Baja"/>
               </StringArray>
             </Property>
           </Properties>
