--- a/src/Interfaz/Login.form
+++ b/src/Interfaz/Login.form
@@ -63,34 +63,32 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="265" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" alignment="0" groupAlignment="2" attributes="0">
-                          <Component id="jLabel3" alignment="2" min="-2" pref="150" max="-2" attributes="0"/>
-                          <Component id="jLabel2" alignment="2" min="-2" pref="150" max="-2" attributes="0"/>
-                      </Group>
-                      <Component id="BT_inicioSesion" alignment="2" min="-2" pref="150" max="-2" attributes="0"/>
-                      <Component id="username" alignment="2" min="-2" pref="150" max="-2" attributes="0"/>
-                      <Component id="contraseña" alignment="2" min="-2" pref="150" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="277" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="2" attributes="0">
+                      <Component id="username" alignment="2" min="-2" pref="145" max="-2" attributes="0"/>
+                      <Component id="jLabel2" alignment="2" min="-2" pref="145" max="-2" attributes="0"/>
+                      <Component id="jLabel3" alignment="2" min="-2" pref="145" max="-2" attributes="0"/>
+                      <Component id="contraseña" alignment="2" min="-2" pref="145" max="-2" attributes="0"/>
+                      <Component id="BT_inicioSesion" alignment="2" min="-2" pref="145" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="285" max="32767" attributes="0"/>
+                  <EmptySpace pref="278" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="149" max="-2" attributes="0"/>
-                  <Component id="jLabel2" min="-2" pref="17" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
-                  <Component id="username" min="-2" pref="22" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel3" min="-2" pref="17" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
-                  <Component id="contraseña" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="168" max="-2" attributes="0"/>
+                  <Component id="jLabel2" min="-2" pref="25" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="username" min="-2" pref="25" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="jLabel3" min="-2" pref="25" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="contraseña" min="-2" pref="25" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="BT_inicioSesion" min="-2" pref="25" max="-2" attributes="0"/>
-                  <EmptySpace pref="164" max="32767" attributes="0"/>
+                  <EmptySpace pref="168" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
